Bug 169088 - FILESAVE PPTX: PPT/PPTX files with OLE object animations can't be opened in PowerPoint after saving as PPTX
Summary: FILESAVE PPTX: PPT/PPTX files with OLE object animations can't be opened in P...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
: 165258 (view as bug list)
Depends on:
Blocks: PPTX-Corrupted PPTX-Animations PPTX-OLE
  Show dependency treegraph
 
Reported: 2025-10-27 09:15 UTC by Karthik
Modified: 2026-02-25 01:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
lp256876-2.ppt (89.00 KB, application/vnd.ms-powerpoint)
2025-10-27 09:19 UTC, Karthik
Details
lp256876-2.pptx (56.25 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-10-27 09:19 UTC, Karthik
Details
lp256876-2-cut.pptx (44.89 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-10-27 09:20 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-10-27 09:15:49 UTC
Description:
After saving any of the attached files as PPTX, they can't be opened in PowerPoint.

The issue is with OLE object animations.

If we unzip the PPTX file and remove the OLE animations from the XML files and rezip it, the resulting file can be opened in PowerPoint.

Steps to Reproduce:
1.Open any the of the attached Files
2.Save them as PPTX
3.Open the resulting file in PowerPoint

Actual Results:
PowerPoint opens the file without any issue.

Expected Results:
PowerPoint can't open the file.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Also LO doesn't preserve all OLE animations
Comment 1 Karthik 2025-10-27 09:19:06 UTC
Created attachment 203562 [details]
lp256876-2.ppt
Comment 2 Karthik 2025-10-27 09:19:31 UTC
Created attachment 203563 [details]
lp256876-2.pptx
Comment 3 Karthik 2025-10-27 09:20:04 UTC
Created attachment 203564 [details]
lp256876-2-cut.pptx
Comment 4 Xisco Faulí 2025-11-10 09:54:47 UTC
Fix in be36f4c40bb7b0c1b8ceb974c932a687f5c488be but not backported to master yet
Comment 5 Karthik 2025-11-10 10:50:59 UTC
(In reply to Xisco Faulí from comment #4)
> Fix in be36f4c40bb7b0c1b8ceb974c932a687f5c488be but not backported to master
> yet

I'll backport it to master
Comment 6 Commit Notification 2025-11-11 05:51:40 UTC
Karthik committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2feb36d92e270240019ff5681466fc4ac97a5405

tdf#169088 Fix PPTX export of OLE animations

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-11-11 12:34:39 UTC
Karthik committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/e51d9cec479cbf101413c591439e343088f990ef

tdf#169088 Fix PPTX export of OLE animations

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-11-27 08:59:59 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/64a80bfea7cf612dd13401c461018ff88453aebc

tdf#169088: Add oleId != picId assert in unit test

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Aron Budea 2026-02-25 01:13:23 UTC
*** Bug 165258 has been marked as a duplicate of this bug. ***