tdf#169088 Fix PPTX export of OLE animations

Presentations with OLE animations when saved as PPTX can't be opened
in PowerPoint.

When exporting OLE animations, the target of the animation is set to
the `pic` inside the OLE instead of OLE.

Change-Id: Ic3e870fff2e896404960f475c67f44df0aef1860
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193110
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit be36f4c40bb7b0c1b8ceb974c932a687f5c488be)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193736
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 2feb36d92e270240019ff5681466fc4ac97a5405)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195633
Tested-by: Michael Stahl <michael.stahl@collabora.com>